--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script><!-- 舊版 -->
+    <link rel="stylesheet" href="./css/style.css">
+
+    <script type="text/babel" src="./jsx/Topbar.jsx"></script>
 </head>
 
 <body>
@@ -15,9 +18,10 @@
     <script type="text/babel">
         function App() {
             return (
-                <>
+                <React.Fragment>
+                    <Topbar />
 
-                </>
+                </React.Fragment>
             )
         }
 
