--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script><!-- 舊版 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+
 
     <link rel="stylesheet" href="./css/cards.css">
     <link rel="stylesheet" href="./css/style.css">
-    
+
 
     <script type="text/babel" src="./jsx/Topbar.jsx"></script>
     <script type="text/babel" src="./jsx/Footer.jsx"></script>
@@ -34,15 +33,48 @@
                 <React.Fragment>
                     <Topbar />
                     <main>
-                        <section className="banner">
+                        <section id="banner">
                             <div className="video-container">
                                 <video autoPlay loop muted >
                                     <source src="./images/81807_Woman taking ice from a glass and putting it into her soft drink_By_Omri_Ohana_Artlist_HD - Compressed with FlexClip.mp4" type="video/mp4" />
                                 </video>
                             </div>
                         </section>
-                    <Scrolling/>
-                    <Cards/>
+                        <Scrolling />
+                        <Cards />
+                        <Scrolling />
+                        <section id="news">
+                            <div className="news_title">
+                                <div className="news_title_b">NEWS</div>
+                                <div className="news_title_m">notice</div>
+                            </div>
+                            <div className="news_content">
+                                <div className="news_content_item">
+                                    <a href="">
+                                        <div className="news_content_item_time">2024.09.19</div>
+                                        <div className="news_content_item_title">“The whiskey market is booming: Global whiskey sales will hit a record high in 2024”</div>
+                                    </a>
+                                </div>
+                                <div className="news_content_item">
+                                    <a href="">
+                                        <div className="news_content_item_time">2024.09.19</div>
+                                        <div className="news_content_item_title">“The whiskey market is booming: Global whiskey sales will hit a record high in 2024”</div>
+                                    </a>
+                                </div>
+                                <div className="news_content_item">
+                                    <a href="">
+                                        <div className="news_content_item_time">2024.09.19</div>
+                                        <div className="news_content_item_title">“The whiskey market is booming: Global whiskey sales will hit a record high in 2024”</div>
+                                    </a>
+                                </div>
+                                <div className="news_content_item">
+                                    <a href="">
+                                        <div className="news_content_item_time">2024.09.19</div>
+                                        <div className="news_content_item_title">“The whiskey market is booming: Global whiskey sales will hit a record high in 2024”</div>
+                                    </a>
+                                </div>
+                            </div>
+                        </section>
 
                     </main>
                     <Footer />
