--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
                             </div>
                             <div className="news_content">
                                 <div className="news_content_item">
-                                    <a href="">
+                                    <a href="https://zh.wikipedia.org/zh-tw/%E5%A8%81%E5%A3%AB%E5%BF%8C">
                                         <div className="news_content_item_time">2024.09.19</div>
                                         <div className="news_content_item_title">“The whiskey market is booming: Global whiskey sales will hit a record high in 2024”</div>
                                     </a>
                                 </div>
                                 <div className="news_content_item">
-                                    <a href="">
+                                    <a href="https://zh.wikipedia.org/zh-tw/%E5%A8%81%E5%A3%AB%E5%BF%8C">
                                         <div className="news_content_item_time">2024.09.19</div>
                                         <div className="news_content_item_title">“The whiskey market is booming: Global whiskey sales will hit a record high in 2024”</div>
                                     </a>
                                 </div>
                                 <div className="news_content_item">
-                                    <a href="">
+                                    <a href="https://zh.wikipedia.org/zh-tw/%E5%A8%81%E5%A3%AB%E5%BF%8C">
                                         <div className="news_content_item_time">2024.09.19</div>
                                         <div className="news_content_item_title">“The whiskey market is booming: Global whiskey sales will hit a record high in 2024”</div>
                                     </a>
                                 </div>
                                 <div className="news_content_item">
-                                    <a href="">
+                                    <a href="https://zh.wikipedia.org/zh-tw/%E5%A8%81%E5%A3%AB%E5%BF%8C">
                                         <div className="news_content_item_time">2024.09.19</div>
                                         <div className="news_content_item_title">“The whiskey market is booming: Global whiskey sales will hit a record high in 2024”</div>
                                     </a>
